Antlr4Examples/Calculator/G4/Calculator.g4
grammar Calculator;

/** The start rule; begin parsing here.*/
prog: stat+ ;

stat: expr NEWLINE				# printExpr
	| ID '=' expr NEWLINE		# assign			
	| NEWLINE					# blank
	;

expr: expr op=('*'|'/') expr		# MulDiv
	| expr op=('+'|'-') expr		# AddSub
	| INT						# int
	| ID						# id
	| '(' expr ')'				# parents
	;

ID: [a-zA-Z]+;
INT: [0-9]+;
NEWLINE: '\r'?'\n';
WS: [ \t]+ -> skip;

MUL: '*';
DIV: '/';
ADD: '+';
SUB: '-';
